--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-body {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(9, 9, 9);
-}
-
 header {
   background-color: rgb(60, 60, 60);
 
@@ -19,13 +13,15 @@ body {
   line-height: 1.7;
   color: #ececee;
   background-color: #1f2029;
-  overflow: hidden;
+
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
   background-position: center;
   background-repeat: repeat;
   background-size: 4%;
   height: 100vh;
   width: 100%;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 .section-center {
@@ -48,9 +44,16 @@ h1 {
   line-height: 1;
   color: #ffeba7;
   text-align: center;
-  -webkit-text-stroke: 2px #ffeba7;
-  -webkit-text-fill-color: transparent;
-  color: transparent;
+
+}
+
+h1.nameTitle {
+  position: absolute;
+  z-index: -2;
+  margin-left: 30%;
+  margin-top: 10%;
+  text-shadow: inset 4px 4px #1f2029;
+  opacity: 0.75;
 }
 
 [type="checkbox"]:checked,
@@ -341,14 +344,57 @@ h1 {
 
   h1 {
     font-size: 9vw;
-    -webkit-text-stroke: 2px transparent;
-    text-stroke: 2px transparent;
-    -webkit-text-fill-color: #ffeba7;
-    text-fill-color: #ffeba7;
+
     color: #ffeba7;
   }
 
   .nav ul li a {
     font-size: 8vh;
   }
+}
+
+img.slideUp {
+  width: 25%;
+  height: 65%;
+  border-radius: 120px;
+  position: relative;
+  float: left;
+  left: 0;
+  top: 620px;
+  transition: all 250ms linear;
+}
+
+div.infoMeio {
+  background-color: rgba(2, 0, 46, 0.373);
+  width: 100vw;
+  height: 70vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  top: 0px;
+
+}
+
+img.leftMe {
+  width: 25%;
+  height: 65%;
+  border-radius: 120px;
+  position: relative;
+  float: left;
+  transition: all 250ms linear;
+  left: 0;
+  top: 150px;
+}
+
+p {
+  top: 0;
+  width: 60%;
+  margin-left:15%;
+  overflow: auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+  font-size: 1rem;
+  line-height: 1;
+  color: #ffeba7;
+  text-align: justify;
 }
