--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ img.slideUp {
 div.infoMeio {
   background-color: rgba(2, 0, 46, 0.373);
   width: 100vw;
-  height: 70vh;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -390,7 +390,7 @@ p {
   top: 0;
   width: 60%;
   margin-left:15%;
-  overflow: auto;
+  overflow:initial;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   font-size: 1rem;
