--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 div.infoMeio {
   background-color: rgba(2, 0, 46, 0.373);
   width: 100vw;
@@ -9,9 +8,11 @@ div.infoMeio {
   top: 0px;
 
 }
+
 h1.nameTitle {
   position: absolute;
 }
+
 img.leftMe {
   width: 25%;
   height: 65%;
@@ -34,4 +35,39 @@ p {
   line-height: 1;
   color: #ffeba7;
   text-align: justify;
+}
+
+
+@media screen and (max-width: 991px) {
+
+  h1.nameTitle {
+    position: relative;
+    margin-top: 85px;
+    text-align: start;
+    margin-left: 230px;
+
+  }
+
+  div.infoMeio {
+    margin-top: 80px;
+
+  }
+
+  img.leftMe {
+    width: 200px;
+    height: 250px;
+
+    transition: all 250ms linear;
+    left: 0;
+    top: 30px;
+  }
+
+
+  p {
+
+    width: 90%;
+    margin: 15px 0px 0px 0px;
+    padding-bottom: 50px;
+
+  }
 }
