--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ p {
   top: 0;
   width: 60%;
   margin-left: 15%;
-  overflow: initial;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   font-size: clamp(0.5em, 4vw, 1.4em);
@@ -39,13 +38,13 @@ p {
 }
 
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1000px) {
 
   h1.nameTitle {
     position: relative;
     margin-top: 85px;
     text-align: start;
-    margin-left: 230px;
+    margin-left: 180px;
 
   }
 
@@ -55,12 +54,11 @@ p {
   }
 
   img.leftMe {
-    width: 200px;
-    height: 250px;
-
+    width: 150px;
+    height: 200px;
     transition: all 250ms linear;
-    left: 0;
-    top: 30px;
+    left: 18px;
+    top: 37px;
   }
 
 
