--- a/pages/aboutme/style.css
+++ b/pages/aboutme/style.css
@@ -7,7 +7,7 @@ p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: clamp(0.6em, 4.5vw, 1.2em);
-    line-height: 1;
+    line-height: 1.3;
     color: #ffeba7;
     text-align: justify;
 }
@@ -17,10 +17,15 @@ h1.nameTitle {
 
 }
 
+h1.subtitle {
+    font-size: 10px;
+    opacity: 0.2;
+}
+
 div.infoMeio {
     margin-top: 100px;
     background-color: rgba(2, 0, 46, 0.373);
     padding-bottom: 15px;
-    padding-top: 15px;
+    padding-top: 25px;
 
 }
