--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img.leftMe {
   position: relative;
   float: left;
   transition: all 250ms linear;
-  left: 0;
+  left: 15px;
   top: 150px;
 }
 
@@ -32,7 +32,7 @@ p {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   font-size: clamp(0.5em, 4vw, 1.4em);
-  line-height: 1;
+    line-height: 1.3;
   color: #ffeba7;
   text-align: justify;
 }
