--- a/pages/contact/style.css
+++ b/pages/contact/style.css
@@ -65,9 +65,13 @@ h1.nameTitle {
 }
 
 .twitter {
+
     margin-top: 1.5em;
-    margin-left: -.9em;
-    fill: #03A9F4;
+  
+    padding: 20%;
+    width: 60px;
+    height: 60px;
+    fill: #FF0000;
 }
 
 .card3 {
@@ -116,7 +120,7 @@ h1.nameTitle {
 .card2:hover {
     cursor: pointer;
     scale: 1.1;
-    background-color: #03A9F4;
+    background-color: #FF0000;
 }
 
 .card2:hover .twitter {
