--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 div.infoMeio {
   background-color: rgba(2, 0, 46, 0.373);
-  width: 100vw;
-  height: fit-content;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  top: 0px;
 
+
+  margin-top: 340px;
+  background-color: rgba(2, 0, 46, 0.373);
+  padding-bottom: 15px;
+  padding-top: 25px;
 }
 
 h1.nameTitle {
@@ -22,19 +21,19 @@ img.leftMe {
   float: left;
   transition: all 250ms linear;
   left: 15px;
-  top: 150px;
+  top: 50px;
 }
 
 p {
   top: 0;
   width: 60%;
-  margin-left: 15%;
+  margin-left: 30%;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   font-size: clamp(0.5em, 4vw, 1.4em);
-    line-height: 1.3;
+  line-height: 1.3;
   color: #ffeba7;
-  text-align: justify;
+
 }
 
 
