--- a/style.css
+++ b/style.css
@@ -1,71 +1,247 @@
-div.infoMeio {
-  background-color: rgba(2, 0, 46, 0.373);
+:root {
 
 
-  margin-top: 340px;
-  background-color: rgba(2, 0, 46, 0.373);
-  padding-bottom: 15px;
-  padding-top: 25px;
+
+
+    --jet: #2d2d2aff;
+    --black-olive: #353831ff;
+    --black-olive-2: #38423bff;
+    --feldgrau: #8cbbb4;
+    --feldgrau-2: #b6dbd5;
+    --spring-green: #20fc8fff;
+
+    --gradient-top: linear-gradient(0deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-right: linear-gradient(90deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-bottom: linear-gradient(180deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-left: linear-gradient(270deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-top-right: linear-gradient(45deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-bottom-right: linear-gradient(135deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-top-left: linear-gradient(225deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-bottom-left: linear-gradient(315deg, #2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+    --gradient-radial: radial-gradient(#2d2d2aff, #353831ff, #38423bff, #3f5e5aff, #20fc8fff);
+
 }
 
-h1.nameTitle {
-  position: absolute;
-  margin-left: 30%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-img.leftMe {
-  width: 25%;
-  height: 65%;
-  border-radius: 120px;
-  position: relative;
-  float: left;
-  transition: all 250ms linear;
-  left: 15px;
-  top: 50px;
+
+body {
+    font-family: Monospace;
+    display: flex;
+
+    background-color: var(--jet);
+
+}
+
+
+
+aside {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black-olive);
+    padding: 30px 40px 30px 34px;
+    border-radius: 15px;
+    margin: 0 auto 15px auto;
+
+
+}
+p.quote {
+    font-size: 1.2rem;
+    color: var(--feldgrau-2);
+    text-align: center;
+    margin: 0px;
+    margin-bottom: 15px;
+
+}
+div.container {
+    background-color: var(--black-olive-2);
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 40px 30px 34px;
+    border-radius: 15px;
+    display: none;
+}
+
+div#workList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+div.card {
+    background-color: var(--black-olive-2);
+    padding: 15px;
+    border-radius: 15px;
+    text-align: center;
+    justify-content: center;
+
+}
+
+div.card img {
+    height: 150px;
+    object-fit: cover;
+}
+
+div.card:hover {
+    background-color: var(--black-olive);
+    cursor:default ;
+}
+
+div#leftPart {
+    margin: 25px;
+    width: 100%;
+}
+
+aside * {
+    margin: 5px 5px;
+
+}
+
+div.info {
+    display: none;
+}
+
+div.nav {
+    background-color: var(--black-olive-2);
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+
+
+
+main {
+    width: fit-content;
+    height: fit-content;
+    margin: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black-olive);
+    padding: 40px 30px 40px 30px;
+    border-radius: 15px;
+    top: 15px;
+
+}
+
+main img {
+    border-radius: 100%;
+    aspect-ratio: 6/7;
+    width: 300px;
+    margin-bottom: 15px;
+}
+
+h1,
+h2 {
+    color: var(--spring-green);
+    text-align: center;
 }
 
 p {
-  top: 0;
-  width: 60%;
-  margin-left: 30%;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: clamp(0.5em, 4vw, 1.4em);
-  line-height: 1.3;
-  color: #ffeba7;
+    margin: 10px;
+    font-size: 1.2rem;
+    color: var(--feldgrau);
+
+}
+
+p#title {
+    font-size: 1rem;
+    margin: 0px;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+div#social svg {
+    aspect-ratio: 1/1;
+    width: 70px;
+    cursor: pointer;
+    color: var(--black-olive-2);
+
+}
+
+g:hover,
+path:hover {
+
+    fill: black;
 
 }
 
 
-@media screen and (max-width: 1000px) {
+@keyframes drop {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
 
-  h1.nameTitle {
-    position: relative;
-    margin-top: 85px;
-    text-align: start;
-    margin-left: 180px;
+    50% {
+        transform: translateY(0px);
+    }
 
-  }
+    75% {
+        transform: translateY(-20px);
+    }
 
-  div.infoMeio {
-    margin-top: 80px;
+    90% {
+        transform: translateY(0px);
+    }
 
-  }
+    95% {
+        transform: translateY(-10px);
+    }
 
-  img.leftMe {
-    width: 150px;
-    height: 200px;
-    transition: all 250ms linear;
-    left: 18px;
-    top: 37px;
-  }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 
+div#countdown * {
+    color: var(--spring-green);
+}
 
-  p {
+#age {
+    cursor: help;
+}
 
-    width: 90%;
-    margin: 15px 0px 0px 20px;
-    padding-bottom: 50px;
+#age:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    margin-top: 25px;
+    transform: translateX(-50%);
+    padding: 5px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 14px;
+    white-space: nowrap;
+}
 
-  }
+#youtube {
+    animation: drop 1s ease-out;
+}
+
+#github {
+    animation: drop 1.25s ease-out;
+}
+
+#instagram {
+    animation: drop 1s ease-out;
 }
