--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 main {
     display: flex;
     margin: auto;
-    height: fit-content;
-    width: fit-content;
+    height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -11,13 +11,43 @@ main {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-}
-
-body {
     background-image: url('./assets/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 15%;
+}
+
+body {
+    overflow: hidden;
+
+}
+
+p, h1, h2, h3 {
+    font-family: "Segoe UI", Arial, sans-serif;
+}
+
+div#lockScreen {
+    background-image: url('./assets/background-lock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    min-height: 100vh;
+    min-width: 100vw;
+    height: 100%;
+    width: 100%;
+    background-position-y: 15%;
+
+    display: flex;
+    margin: auto;
+    bottom: 0;
+    right: 0;
+}
+
+img#lockScreenPicture {
+    height: 200px;
+    cursor: pointer;
 }
 
 #row {
