--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 15%;
+    font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
+
 }
 
 body {
@@ -22,7 +24,10 @@ body {
 
 }
 
-p, h1, h2, h3 {
+p,
+h1,
+h2,
+h3 {
     font-family: "Segoe UI", Arial, sans-serif;
 }
 
@@ -82,4 +87,167 @@ input {
     width: 250px;
     margin-left: 25px;
 
+}
+
+div#task-bar {
+    bottom: 0;
+    position: absolute;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    height: 40px;
+    border-top: solid 1px rgba(255, 255, 255, .5);
+    -webkit-box-shadow: 0 -1px 0 0 #00506b;
+    box-shadow: 0 -1px 0 0 #00506b;
+    z-index: 1;
+}
+
+#task-bar>#blur-overlay {
+    position: absolute;
+    top: 0;
+    right: -150px;
+    bottom: -150px;
+    left: -150px;
+    background-image: url("https://imyourman.dk/codepen/windows/background.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    z-index: 2;
+}
+
+#task-bar>#blur-overlay:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.25) 15%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.6) 85%, rgba(0, 0, 0, 0.6) 100%);
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.25) 15%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.6) 85%, rgba(0, 0, 0, 0.6) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.25) 15%, rgba(0, 0, 0, 0.25) 75%, rgba(0, 0, 0, 0.6) 85%, rgba(0, 0, 0, 0.6) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#66000000', endColorstr='#66000000', GradientType=1);
+    content: '';
+    z-index: 3;
+}
+
+#menu-button {
+    position: absolute;
+    top: 3px;
+    bottom: 3px;
+    left: 10px;
+    display: block;
+    width: 32px;
+    height: 32px;
+    z-index: 3;
+    background-image: url("./assets/start-button.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    cursor: pointer;
+}
+
+#pined-items {
+    position: absolute;
+    top: 0;
+    left: 50px;
+    bottom: 0;
+    display: block;
+}
+
+#pined-items>.pined-icon {
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 40px;
+    background-size: 32px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: solid 1px transparent;
+    border-radius: 2px;
+    z-index: 3;
+}
+
+#datetime {
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    z-index: 3;
+    text-align: center;
+
+}
+
+#datetime>span {
+    display: block;
+    margin: 0;
+    font-size: 9pt;
+    color: #fff;
+}
+
+#show-desktop {
+    position: absolute;
+    top: 2px;
+    right: 0;
+    bottom: 0;
+    width: 15px;
+    background: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 30%, rgba(0, 0, 0, 0.2) 31%, rgba(0, 0, 0, 0.2) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 30%, rgba(0, 0, 0, 0.2) 31%, rgba(0, 0, 0, 0.2) 100%);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 30%, rgba(0, 0, 0, 0.2) 31%, rgba(0, 0, 0, 0.2) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33ffffff', endColorstr='#33000000', GradientType=1);
+    border: solid 1px rgba(255, 255, 255, .2);
+    z-index: 3;
+    -webkit-box-shadow: -1px 0 0 0 #000;
+    box-shadow: -1px 0 0 0 #000;
+}
+
+#show-desktop:hover {
+    background: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.2) 30%, rgba(255, 255, 255, 0.2) 31%, rgba(255, 255, 255, 0.2) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.2) 30%, rgba(255, 255, 255, 255.2) 31%, rgba(255, 255, 255, 0.2) 100%);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.2) 30%, rgba(255, 255, 255, 0.2) 31%, rgba(255, 255, 255, 0.2) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33ffffff', endColorstr='#33000000', GradientType=1);
+    border: solid 1px rgba(255, 255, 255, .2);
+}
+
+
+#icon {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0);
+    border-color: rgba(255, 255, 255, 0);
+    padding: 10px;
+
+    left: 10px;
+}
+
+#icon:hover {
+    background-color: rgba(255, 255, 255, .3);
+    border-color: rgba(255, 255, 255, .3);
+}
+
+#icon img {
+    height: 60px;
+}
+
+#icon p {
+    color: white;
+    font-size: 20px;
+    margin: 0;
+    text-align: center;
+    text-shadow: 0 2px 2px #000;
+    text-overflow: clip;
+    cursor: pointer;
+}
+
+#pined-items>.msnTaskBar {
+    background-image: url("./assets/msnLogo.png");
+    cursor: pointer;
+
+}
+
+#pined-items>.msnTaskBar:hover {
+    background-color: rgba(255, 255, 255, .3);
+    border-color: rgba(255, 255, 255, .3);
 }
