--- a/style.css
+++ b/style.css
@@ -251,3 +251,18 @@ div#task-bar {
     background-color: rgba(255, 255, 255, .3);
     border-color: rgba(255, 255, 255, .3);
 }
+
+.screen {
+    max-height: 600px;
+    max-width: 1000px;
+    text-overflow: hide;
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+}
+
+canvas#line {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.267);
+    margin: 10px 0px;
+}
