Teste first page mobile

--- a/mobile/profile/style.css
+++ b/mobile/profile/style.css
@@ -13,7 +13,19 @@ body {
 
 .cell {
     background-color: #019501;
-    height: 95vh;
+    height: fit-content;
     width: 92%;
 }
 
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    color: white;
+    font-size: 20px;
+    margin: 10px 5px;
+    text-align: start;
+}
