Revert "Teste first page mobile"
This reverts commit ce850cbc4a6ccd063daf571b51690007a838f4a6.

--- a/mobile/profile/style.css
+++ b/mobile/profile/style.css
@@ -13,19 +13,7 @@ body {
 
 .cell {
     background-color: #019501;
-    height: fit-content;
+    height: 95vh;
     width: 92%;
 }
 
-
-h1 {
-    color: white;
-    text-align: center;
-}
-
-p {
-    color: white;
-    font-size: 20px;
-    margin: 10px 5px;
-    text-align: start;
-}
