--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ p#ativarWin {
     font-size: 25px;
     color: rgba(255, 255, 255, 0.609);
     font-weight: 100;
+    text-shadow: #00000070 1px 1px;
     margin: 0px;
     z-index: 999;
 }
